include bootstrap v4.0.0-alpha.2
add all bootstrap components for now
add bower.json
add .gitignore file
split code between docs.css for brand-guide styles and main.scss for gethangar scss code

--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,11 @@
 title: Get Hangar
 email: get@thehangar.cr
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hangar look and feel to your static content websites.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://gethangar.cr" # the base hostname & protocol for your site
-twitter_username: gethangar
-github_username:  gethangar
+twitter_username: hangar_cr
+github_username:  hangarcr
 
 # Dependencies
 markdown:         kramdown
@@ -23,3 +21,10 @@ highlighter:      rouge
 
 # Permalinks
 permalink:        pretty
+
+# Where things are
+encoding:         UTF-8
+source:          	./docs
+destination:      ./_site
+sass:
+  style: :compressed
